--- a/index.htm
+++ b/index.htm
@@ -21,7 +21,7 @@
     </header>
     <div class="max-width">
     <section id="main_content" class="main-content">
-
+      <button onclick="loadMorePokemon()">load</button>
 
     </section>
     </div>
