Recreate everything for a better code structure

--- a/index.htm
+++ b/index.htm
@@ -19,9 +19,14 @@
         </div>
       </nav>
     </header>
+    <button onclick="loadMorePokemon()"> Load</button>
     <div class="max-width">
     <section id="main_content" class="main-content">
+     
 
+
+
+   
 
     </section>
     </div>
