--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
         </div>
       
         <div id="number-selection">
-          <label for="number">Wähle eine Zahl:</label>
+          <label for="number">Choose a number:</label>
           <select id="number-select">
             <option value="19">Base</option>
             <option value="32">32</option>
@@ -41,7 +41,9 @@
             <!-- Weitere Optionen hier hinzufügen -->
           </select>
           <button onclick="confirmNumber()">Bestätigen</button>
-          <div id="current-load-value"></div>
+          <div id="current-load-value">
+            <span> Current load value :  </span>  <div class="center-number" id="current-load-value-number">19</div>
+          </div>
         </div>
       </nav>
     </header>
